--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 offset-lg-4" id="alert">
-                <div class="alert alert-success">
-                    <strong id="result"></strong>
+                <div id="banner" class="alert alert-success">
+                    <strong id="result">Account created successfully</strong>
                 </div>
             </div>
         </div>
